# surakarta-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: mainwindow.h  surakarta_agent_setting_widget.h  surakarta_animation.h  surakarta_board_widget.h  surakarta_daemon_thread.h  surakarta_game_browser_window.h  surakarta_session_window.h
src/: main.cpp  mainwindow.cpp  mainwindow.ui  surakarta_agent_setting_widget.cpp  surakarta_agent_setting_widget.ui  surakarta_animation.cpp  surakarta_board_widget.cpp  surakarta_game_browser_window.cpp  surakarta_game_browser_window.ui  surakarta_session_window.cpp  surakarta_session_window.ui
